test/testdata/list/invalid_unary_op_error.lox
-["a"]; // error: '-' operator cannot be used with type 'list'
